--- a/webroot/css/estiloej.css
+++ b/webroot/css/estiloej.css
@@ -27,19 +27,21 @@ table{
 }
 td{
     width: 25%;
-    height: 50px;
+    height: 60px;
 }
-div{margin: 2%;}
+div{margin: 8px;}
 .dato, .error{
     width: 100%;
     height: 10px;
-    font-size: small;
+    font-size: 15px;
 }
 input{
     width: 100%;
     height: 25px;
+    font-size: 16px;
     border: none;
     border-bottom: 1px solid black;
+    padding: 0 10px;
 }
 #submit, #value{
     border: 1px solid black;
@@ -78,6 +80,9 @@ h3{
 }
 h4{
     font-size: 20px;
+}
+.ast{
+    color: #bb1212;
 }
 
 
